[gd_scene load_steps=41 format=3 uid="uid://cinic2jo4wvuf"]

[ext_resource type="Script" uid="uid://dy78rw4ryl71k" path="res://entities/towers/ranged_tower.gd" id="1_wriij"]
[ext_resource type="Texture2D" uid="uid://cd0sbi4spj2ka" path="res://Textures/Weapons/Weapons/cannon_dying.png" id="2_r4n58"]
[ext_resource type="Texture2D" uid="uid://cfdsu05i4b8po" path="res://Textures/Weapons/Weapons/cannon.png" id="2_wriij"]
[ext_resource type="Texture2D" uid="uid://cjl1p6kj4x3j2" path="res://Textures/Weapons/Weapons/cannon_hurt.png" id="3_onqte"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6m5dq"]
atlas = ExtResource("2_r4n58")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i558l"]
atlas = ExtResource("2_r4n58")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_le6ko"]
atlas = ExtResource("2_r4n58")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ls50"]
atlas = ExtResource("2_r4n58")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lp5e"]
atlas = ExtResource("2_r4n58")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mwpf"]
atlas = ExtResource("2_r4n58")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dabq"]
atlas = ExtResource("2_r4n58")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tofc"]
atlas = ExtResource("2_r4n58")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_su024"]
atlas = ExtResource("2_r4n58")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4skml"]
atlas = ExtResource("2_r4n58")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_show2"]
atlas = ExtResource("3_onqte")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pqxf"]
atlas = ExtResource("3_onqte")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbo71"]
atlas = ExtResource("3_onqte")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3vnm"]
atlas = ExtResource("3_onqte")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xo06"]
atlas = ExtResource("3_onqte")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfqp4"]
atlas = ExtResource("3_onqte")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_177xv"]
atlas = ExtResource("3_onqte")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_onk42"]
atlas = ExtResource("3_onqte")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwy4q"]
atlas = ExtResource("3_onqte")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb72h"]
atlas = ExtResource("3_onqte")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh73x"]
atlas = ExtResource("2_wriij")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4n58"]
atlas = ExtResource("2_wriij")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_onqte"]
atlas = ExtResource("2_wriij")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_014vy"]
atlas = ExtResource("2_wriij")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eevqn"]
atlas = ExtResource("2_wriij")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nunoe"]
atlas = ExtResource("2_wriij")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uoyfg"]
atlas = ExtResource("2_wriij")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_db8nx"]
atlas = ExtResource("2_wriij")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kr4x4"]
atlas = ExtResource("2_wriij")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yt4w"]
atlas = ExtResource("2_wriij")
region = Rect2(288, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6m5dq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m5dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i558l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_le6ko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ls50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lp5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mwpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dabq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tofc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_su024")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4skml")
}],
"loop": true,
"name": &"canon_dying",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_show2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pqxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbo71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3vnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xo06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfqp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_177xv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onk42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwy4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb72h")
}],
"loop": true,
"name": &"canon_hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sh73x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4n58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onqte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_014vy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eevqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nunoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uoyfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_db8nx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kr4x4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yt4w")
}],
"loop": true,
"name": &"canon_shoot",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sh73x"]
radius = 21.32

[sub_resource type="CircleShape2D" id="CircleShape2D_wriij"]
radius = 226.01991

[sub_resource type="Gradient" id="Gradient_bls4j"]
offsets = PackedFloat32Array(0.43571427)
colors = PackedColorArray(0, 1, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wriij"]
gradient = SubResource("Gradient_bls4j")
height = 3

[sub_resource type="CircleShape2D" id="CircleShape2D_r4n58"]
radius = 16.03122

[node name="RangedTower" type="StaticBody2D"]
collision_layer = 64
collision_mask = 99
script = ExtResource("1_wriij")
tower_damage = 15.0

[node name="CanonPivot" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="CanonAnimationSprite" type="AnimatedSprite2D" parent="CanonPivot"]
unique_name_in_owner = true
rotation = 1.5707964
sprite_frames = SubResource("SpriteFrames_6m5dq")
animation = &"canon_shoot"
frame_progress = 0.28806487

[node name="RangedFiriningPosition" type="Marker2D" parent="CanonPivot"]
unique_name_in_owner = true
position = Vector2(18, 0)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 99

[node name="RangeTowerDamageRange" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_sh73x")

[node name="rangeTowerHitRange" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_wriij")

[node name="towerBulletInterval" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -32.0
offset_top = -25.0
offset_right = 32.0
offset_bottom = -21.0

[node name="RangedTowerHPBar" type="TextureProgressBar" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_progress = SubResource("GradientTexture2D_wriij")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_r4n58")
